# piclex

./: CMakeLists.txt  Doxyfile  README
base/: CMakeLists.txt
base/include/: BaseExceptions.h  BaseUtil.h  Clonable.h  FsUtil.h  Logger.h  Mutex.h  Nullable.h
base/src/: BaseUtil.cpp  FsUtil.cpp  Logger.cpp  Mutex.cpp
graphics/: CMakeLists.txt
graphics/include/: GraphicsExceptions.h  Image.h
graphics/src/: Image.cpp
graphics/tests/: CMakeLists.txt  ImageTest.cpp  test.cpp
gui/: CMakeLists.txt  GuiDefines.cpp  GuiDefines.h  ImageMapFunc.cpp  ImageMapFunc.h  ImageReadRunnable.cpp  ImageReadRunnable.h  MainWindow.cpp  MainWindow.h  Mapper.h  MapperCallback.h  MapperThread.h  MockSearchEngine.cpp  MockSearchEngine.h  SearchEngine.h  SearchEngineFactory.cpp  SearchEngineFactory.h  SearchItem.cpp  SearchItem.h  SearchModel.cpp  SearchModel.h  SearchViewDelegate.cpp  SearchViewDelegate.h  Searcher.h  SearcherFactory.cpp  SearcherFactory.h  SimpleSearchEngine.cpp  SimpleSearchEngine.h  SimpleSearcher.cpp  SimpleSearcher.h  main.cpp
gui/res/ui/: main.ui
search/: CMakeLists.txt
search/include/: DocDescription.h  DocDescriptionGatherer.h  DocIdReader.h  DocProcessor.h  DocProvider.h  FsDocProvider.h  Grammar.h  IdStorage.h  ImageDocDescription.h  ImageDocProcessor.h  IndexMaker.h  IndexMakerFactory.h  IndexSearcher.h  IndexSearcherFactory.h  IndexToken.h  InvertedIndex.h  Matrix3d.h  ParseNode.h  Parser.h  ParserInstance.h  Rule.h  SearchDefines.h  Searcher.h  Sentence.h  SubsentenceGatherer.h  Symbol.h  Tree.h  TreeBuilderParser.h  TreeBuilderParserInstance.h  TreeIterator.h  TreeNode.h  TreeVisitor.h
search/include/mock/: SimpleDocProvider.h  SimpleIndexMaker.h  SimpleIndexSearcher.h  WordDocProcessor.h
search/src/: DocDescription.cpp  DocDescriptionGatherer.cpp  DocIdReader.cpp  FsDocProvider.cpp  Grammar.cpp  IdStorage.cpp  ImageDocDescription.cpp  ImageDocProcessor.cpp  IndexMaker.cpp  IndexMakerFactory.cpp  IndexSearcher.cpp  IndexSearcherFactory.cpp  IndexToken.cpp  InvertedIndex.cpp  ParseNode.cpp  Parser.cpp  ParserInstance.cpp  Rule.cpp  Searcher.cpp  Sentence.cpp  SubsentenceGatherer.cpp  Symbol.cpp  TreeBuilderParser.cpp  TreeBuilderParserInstance.cpp
search/src/mock/: SimpleDocProvider.cpp  SimpleIndexMaker.cpp  SimpleIndexSearcher.cpp  WordDocProcessor.cpp
search/tests/: CMakeLists.txt  DocDescriptionTest.cpp  IdStorageTest.cpp  InvertedIndexTest.cpp  Matrix3dTest.cpp  ParserTest.cpp  SymbolTest.cpp  TreeTest.cpp
tester/: CMakeLists.txt  tester.cpp
